[gd_scene load_steps=5 format=3 uid="uid://barq8m82p65rj"]

[ext_resource type="Script" path="res://Scripts/Stair.gd" id="1_v48fx"]
[ext_resource type="Texture2D" uid="uid://bodffla2dw5ai" path="res://Assets/Tiles/Struct.png" id="1_ym2ia"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_grdbu"]
size = Vector2(8, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pr78t"]
size = Vector2(58, 48)

[node name="Stair" type="StaticBody2D"]
z_index = 1
z_as_relative = false
collision_layer = 2
script = ExtResource("1_v48fx")

[node name="Sprite2d" type="Sprite2D" parent="."]
y_sort_enabled = true
texture = ExtResource("1_ym2ia")
centered = false
offset = Vector2(-16, -80)
region_enabled = true
region_rect = Rect2(32, 160, 64, 96)

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
position = Vector2(-12, -32)
shape = SubResource("RectangleShape2D_grdbu")

[node name="CollisionShape2d2" type="CollisionShape2D" parent="."]
position = Vector2(44, -32)
shape = SubResource("RectangleShape2D_grdbu")

[node name="BottomSensor" type="Area2D" parent="."]

[node name="CollisionShape2d" type="CollisionShape2D" parent="BottomSensor"]
position = Vector2(16, -15)
shape = SubResource("RectangleShape2D_pr78t")

[node name="TopSensor" type="Area2D" parent="."]

[node name="CollisionShape2d" type="CollisionShape2D" parent="TopSensor"]
position = Vector2(16, -49)
shape = SubResource("RectangleShape2D_pr78t")

[connection signal="body_entered" from="BottomSensor" to="." method="_on_bottom_sensor_body_entered"]
[connection signal="body_exited" from="BottomSensor" to="." method="_on_bottom_sensor_body_exited"]
[connection signal="body_entered" from="TopSensor" to="." method="_on_top_sensor_body_entered"]
[connection signal="body_exited" from="TopSensor" to="." method="_on_top_sensor_body_exited"]
